build: Further fixes & improvements